--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Mohit Kumar Saxena </title>
 	  <link rel="shortcut icon" type="image/x-icon" href="https://static.squarespace.com/universal/default-favicon.ico"/>
-<link rel="canonical" href="http://www.mohitkumarsaxena.com/"/>
+<link rel="canonical" href="http://www.mohitsaxena.com/"/>
   <META name="description" content="Mohit Kumar Saxena is a groomed IT professional having extensive experience in designing and developing enterprise level applications.">
   <META name="keywords" content="mohit,saxena,mohit saxena,technology specialist,wcm,portal,technology specialist,cognizant,fulcrum,mentor,Java,wcm,cms,database,sql,BPM,html,css,angular,javascript,websphere portal,jquery,angular2">
 
@@ -90,7 +90,17 @@
 		            <div class="col-md-4 col-md-offset-2 text-center waypoint-2">
 		                <div class="anchor"><span class="icon-anchor"></span></div>
 		                <h3>About Me</h3>
-		                <p class="text-mid">I am a Technology leader and Business thinker with 12 years of experience focusing on bringing brand, marketing, digital, tech, data, customer experience, and AI together to catalyze transformation and to innovate. I am often described as a progressive, driven, down-to-earth, strategic and technology expert with good business acumen.</p>
+		                <p class="text-mid">Dedicated, Action and Result oriented Technology Architect / Software
+Development Manager with 12+ years of proven Management and
+Technology experience across functional domains such as Insurance,
+Banking, Finance, Healthcare, and Media. A trusted advisor to
+stakeholders and partners providing Architectural guidance and
+recommendations to produce success.
+SME in Microservices Architecture, Angular, MEAN, Security, AWS,
+SOA,Identity and Compliance management. Amplified multi-faceted
+career as a Strategic & Tactical Thought Leader, Program Manager leading
+transformation in organizations, connecting Customer experience, AI, brand,
+Technology and media.</p>
 		            </div>
 				 <div class="col-md-4 col-md-offset-2 text-center waypoint-2">
 		                <div class="anchor"><span class="icon-anchor"></span></div>
